# knowledge_engineering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: files.qrc  main.cpp
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/data/: CMakeLists.txt  Class.cpp  Class.h  Defending.h  Dribbling.cpp  Dribbling.h  Pace.h  Passing.h  Physical.h  Player.cpp  Player.h  Shooting.h  Statistic.cpp  Statistic.h  difference.cpp  difference.h  normal.cpp  normal.h  playerstatistics.cpp  playerstatistics.h
src/data/measurements/: DefendingMeasurement.h  DribblingMeasurement.h  Exercise.cpp  Exercise.h  Measurement.cpp  Measurement.h  PaceMeasurement.h  PassingMeasurement.h  PhysicalMeasurement.h  ShootingMeasurement.h
src/gui/js/: UI.js
src/gui/qml/: window.qml
src/gui/qml/components/: StatisticView.qml
